adds javassist.util.proxy.ProxyFactory#onlyPublicMethods.  If true, Javassist uses java.lang.invoke.MethodHandles.Lookup to load a class.